--- a/portfolio.html
+++ b/portfolio.html
@@ -88,14 +88,14 @@
                 <article>
                     <h2 class="font-mont txt-center">Gallery</h2>
                     <section id="gallery">
-                        <div><img src="./image/gallery/key.jpg" alt="keyboard"></div>
-                        <div><img src="./image/gallery/sufyan.jpg" alt="Abstract image"></div>
-                        <div><img src="./image/gallery/winter.jpg" alt="A house by the lake in winter"></div>
-                        <div><img src="./image/gallery/sol6000x4000.jpg" alt="Cactus"></div>
-                        <div><img src="./image/gallery/harley.jpg" alt="Motorcycle"></div>
-                        <div><img src="./image/gallery/building.jpg" alt="A side of a building"></div>
-                        <div><img src="./image/gallery/retro.jpg" alt="A retro car."></div>
-                        <div><img src="./image/gallery/nature.jpg" alt="Cactus"></div>
+                        <div><img src="./img/gallery/key.jpg" alt="keyboard"></div>
+                        <div><img src="./img/gallery/sufyan.jpg" alt="Abstract image"></div>
+                        <div><img src="./img/gallery/winter.jpg" alt="A house by the lake in winter"></div>
+                        <div><img src="./img/gallery/sol6000x4000.jpg" alt="Cactus"></div>
+                        <div><img src="./img/gallery/harley.jpg" alt="Motorcycle"></div>
+                        <div><img src="./img/gallery/building.jpg" alt="A side of a building"></div>
+                        <div><img src="./img/gallery/retro.jpg" alt="A retro car."></div>
+                        <div><img src="./img/gallery/nature.jpg" alt="Cactus"></div>
                     </section>
                     <section id="full-screen">
                         <section>
@@ -105,7 +105,7 @@
                                     <path
                                         d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z" />
                                 </svg></div>
-                            <img src="./image/gallery/sufyan.jpg" alt="">
+                            <img src="./img/gallery/sufyan.jpg" alt="">
                             <div id="fs-right"><svg xmlns="http://www.w3.org/2000/svg" height="2em"
                                     style="padding: 3px 8px 0 7.5px"
                                     viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
